Fix wrapping text in header logos on small screen

--- a/less/engineer-apart.less
+++ b/less/engineer-apart.less
@@ -181,21 +181,26 @@ header {
         padding: 150px 0 50px;
         position: relative;
         height: 100vh;
+
         .header-content-inner {
             position: absolute;
             top: 50%;
             width: 100%;
             margin: 0 auto;
+            white-space: nowrap;
+
             h1 {
                 margin-top: 0;
                 margin-bottom: 30px;
                 font-size: 30px;
             }
+
             .row div.services {
                 display: inline-block;
                 margin: 0.2em;
                 padding: 1em;
             }
+
             .list-badges {
                 margin-bottom: 25px;
                 img {
